--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
-    "codegen": "graphql-codegen --config codegen.ts",
-    "compile": "npm run codegen && tsc",
-    "start": "node ./dist/index.js",
+    "start": "npm run build && node ./dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
